Corrected line-spacing

--- a/app/assets/stylesheets/additions.css
+++ b/app/assets/stylesheets/additions.css
@@ -21,7 +21,6 @@ a:hover {
 
 h1,h2,h3,h4,h5,h6 {
   line-height: 1;
-  line-height: 20px;
   color: #dc143c;
 }
 /* end from bootstrap-century */
